<resources>
    <string name="input_mobileno">Mobile No</string>
    <string name="input_password">Password</string>
    <string name="login_infromation">You do not have login yet. Please login or create new account for use the application functions</string>
    <string name="msg_new_account">Create New Account</string>
    <string name="login_btn_skip">Skip</string>
    <string name="login_tv_country_code">Country Code</string>
    <string name="login_tv_mobile_no">Mobile Number</string>
    <string name="login_tv_password">Password</string>
    <string name="login_tv_create_new_account">Create New Account >></string>
    <string name="login_tv_skip">Skip >></string>
    <string name="login_btn_country_code_txt">SG +65</string>
    <string name="frag_signup_one_tv_basic_info">Basic Info</string>
    <string name="frag_signup_one_tv_idtype">ID Type :</string>
    <string name="frag_signup_one_tv_nric">Nric :</string>
    <string name="msg_forgotpwd">forget your password?</string>
    <string name="msg_Sign_up">Login</string>
    <string name="title_activity_login">Login or Sign Up</string>
    <string name="fogot_pwd_label_info">Provide us the email id of your account and we will sent you an email to reset your password</string>
    <string name="fogot_pwd_label_enter_email">Enter Mobile Number :</string>
    <string name="fogot_pwd_label_send">SEND</string>
    <string name="title_activity_forgot_pwd">Forgot Password</string>
    <string name="_header">HealthAssist</string>
    <string name="nav_search_clinic">Find Clinic</string>
    <string name="nav_my_queue_appt">Queue &amp; Appointments</string>
    <string name="nav_med_reminder">Med Reminder</string>
    <string name="nav_message">Message</string>
    <string name="title_activity_signup">Create New Account</string>
    <string name="activity_signup_BIODATA">BIODATA</string>
    <string name="title_setting">Setting</string>
    <string name="msg_account_info">Account</string>
    <string name="setting_label_mobile">Mobile</string>
    <string name="msg_account_notlogin">Login or Sign Up</string>
    <string name="msg_account_login">Login/Sign up</string>
    <string name="msg_account_setting">Account Pending Verification. Touch to verify</string>
    <string name="setting_label_accinfo">My Account Info</string>
    <string name="msg_security_info">Security</string>
    <string name="msg_security_pin">PIN</string>
    <string name="msg_app_info">APP Info</string>
    <string name="msg_app_version">Version</string>
    <string name="msg_term_conditions">Terms &amp; Conditions</string>
    <string name="msg_privacy">Privacy Policies</string>
    <string name="activity_tnc_title_term_conditions">Terms &amp; Conditions</string>
    <string name="activity_tnc_title_privacy">Privacy Policies</string>
    <string name="msg_account_email">Email</string>
    <string name="title_activity_haze_info">Haze Information</string>
    <string name="textview_hinit_24hrclinic">24 Hours clinic</string>
    <string name="textview_lable_note">Note</string>
    <string name="textview_lable_address">Address</string>
    <string name="textview_lable_contact">Contact</string>
    <string name="textview_lable_fax">Fax</string>
    <string name="textview_lable_email">Email</string>
    <string name="textview_lable_openhr">Operating Hours</string>
    <string name="textview_lable_showalltime">Show All Times</string>
    <string name="input_search_clinic_by_etc">Search </string>
    <string name="checkbox_24hr">24 Hours</string>
    <string name="checkbox_CHAS">CHAS</string>
    <string name="checkbox_queuenow">Queue Now</string>
    <string name="noclick"> No Clinics Found. Search Again.</string>
    <string name="ActivitySearchClinic">ActivitySearchClinic</string>
    <string name="title_qrclinicDetail">Profile Submission</string>
    <string name="textview_qrclinicid">Clinic id :</string>
    <string name="button_qrclinicConfirm">CONFIRM</string>
    <string name="nav_my_queue">My Queue</string>
    <string name="nav_my_app">Appointments</string>
    <string name="title_manual_clinic_Dialog">Profile Submission</string>
    <string name="msg_enter_clinic">Please Enter Clinic Id</string>
    <string name="error_manual_clinic_Dialog">  Clinic not Exist , Please choose other</string>
    <string name="input_clinic_id">Clinic Id</string>
    <string name="action_manual">SUBMIT</string>
    <string name="action_scan">MANUAL KEY IN</string>
    <string name="scan_title">Scan Clinic QR Code</string>
    <string name="title_activity_medical_profile">Medical Profile</string>
    <string name="title_activity_nearby_doctor"> Find Clinic</string>
    <string name="input_clinic">Clinic Name or Street Name</string>
    <string name="input_pcode">Clinic Postal Code</string>
    <string name="button_input_search">Search</string>
    <string name="textview_input_or"> or </string>
    <string name="button_input_nearme"> Clinics Near Me</string>
    <string name="button_gp"> GP Clinics</string>
    <string name="button_sp"> Specialist Clinics</string>
    <string name="button_dental"> Dental Clinics</string>
    <string name="nearbydoc">NBD</string>
    <string name="account_birthday">Birthday</string>
    <string name="account_address">Current Address</string>
    <string name="textview_activity_pin">Enter Password</string>
    <string name="textview_activity_preferred_myclinic">My Clinic</string>
    <string name="queue_detail_dialog_DOB">DOB</string>
    <string name="queue_detail_dialog_Request_date">Request Date</string>
    <string name="queue_detail_dialog_QueueNO">QueueNO</string>
    <string name="queue_detail_dialog_CurrentQueue">Current Queue</string>
    <string name="queue_detail_dialog_Description">Description</string>
    <string name="ActivityPreferredClinic">ActivityPreferredClinic</string>
    <string name="input_nric">ID Number</string>
    <string name="queue_dialog_dob">Date of Birth</string>
    <string name="action_queue">SEND</string>
    <string name="detailed_clinicname">ClinicName</string>
    <string name="detailed_block">Block</string>
    <string name="detailed_street">Street</string>
    <string name="detailed_unit">Unit</string>
    <string name="detailed_Building">Building</string>
    <string name="prefix_detailed_postalcode">S(</string>
    <string name="detailed_postalcode">PostalCode</string>
    <string name="postfix_detailed_postalcode">)</string>
    <string name="detailed_contact">Contact</string>
    <string name="detailed_fax">Fax:</string>
    <string name="detailed_website">Website:</string>
    <string name="detailed_nopeopelq">No of people in queue :</string>
    <string name="detailed_available">No one in Queue</string>
    <string name="button_detailed_dod">DOCTOR ON DUTY</string>
    <string name="button_detailed_register_q">REGISTER QUEUE</string>
    <string name="button_detailed_locate">LOCATE US</string>
    <string name="Activityclinicdetailed">clinicdetailed</string>
    <string name="mp_myself">MYSELF</string>
    <string name="msg_app_note"> Note: PIN is irrecoverable</string>
    <string name="pin_setup">Enter PIN</string>
    <string name="confirm_setup">Confirm PIN</string>
    <string name="pin_lock_profile">Lock Profile</string>
    <string name="spinner_gender">Gender</string>
    <string name="input_spinner_choose_nric_type">NRIC Type</string>
    <string name="input_spinner_choose_relation_type">Relationship</string>
    <string name="input_spinner_choose_language">Language Spoken</string>
    <string name="input_spinner_choose_nationality">Nationality</string>
    <string name="input_spinner_choose_marriage">Choose Status</string>
    <string name="input_spinner_prefixph">+65</string>
    <string name="input_spinner_choose_setup_type">Pin Setup Time</string>
    <string name="button_setup_confirm">CONFIRM</string>
    <string name="msg_sign_up">Below is all we need to create your account</string>
    <string name="input_name">Name</string>
    <string name="input_mobile">Mobile Number</string>
    <string name="msg_sign_up_agree">By signing up, I agree to the </string>
    <string name="tnc_link"><a href="">Terms &amp; </a></string>
    <string name="tnc_linkcon"><a href=""> Conditions</a></string>
    <string name="largetnc_linkcon"><a href="">Terms &amp; Conditions</a></string>
    <string name="privacy_link"><a href="">Privacy Policies</a></string>
    <string name="action_sign_up">Sign Up</string>
    <string name="app_direction"><a href="">~ DIRECTION</a></string>
    <string name="activity_tnc_offline">Can\'t connect while OFFLINE</string>
    <string name="action_Dialog_FindClinic">FIND CLINIC</string>
    <string name="msg_queue_45mins">10 minutes</string>
    <string name="msg_queue_10mins">10 minutes</string>
    <string name="msg_queue_info1_part1">You must be an existing patient of this clinic to get a queue number, submit profile and verify at clinic within</string>
    <string name="msg_queue_info_part3">to speed up profile registration process.</string>
    <string name="msg_queue_info_pending1">Your profile is pending download and verification by the clinic. Please go to clinic within</string>
    <string name="msg_queue_info_pending2"> to get your profile verified to complete the patient registration process.</string>
    <string name="msg_queue_unknown1">1.If the profile is an existing patient of the clinic then there is not need to submit the profile to request
    a queue number.</string>
    <string name="msg_queue_unknown2">Please allow</string>
    <string name="msg_queue_unknown3">for the clinic to respond to your queue request.</string>
    <string name="msg_queue_unknown4">A notification will be sent to you once the clinic responded to your request.</string>
    <string name="action_queue_continue">CONTINUE</string>
    <string name="input_nric_type">ID Type :</string>
    <string name="input_error_nric_type">** NRIC Type is Required</string>
    <string name="input_error_dob">** DOB is Required</string>
    <string name="input_error_relation">** Relationship is Required</string>
    <string name="input_sex">Gender</string>
    <string name="input_female">Female</string>
    <string name="input_male">Male</string>
    <string name="input_nationality">Nationality</string>
    <string name="input_autonationality">Search Nationality</string>
    <string name="input_relation">Relationship</string>
    <string name="input_married">Marital</string>
    <string name="input_upload">Submit</string>
    <string name="medDispense_medtitle">Medication</string>
    <string name="medDispense_name">Name :</string>
    <string name="medDispense_nrictype">Nric Type :</string>
    <string name="medDispense_nric">Nric :</string>
    <string name="medDispense_dob">DOB :</string>
    <string name="medDispense_visitno">Visit No :</string>
    <string name="medDispense_visitdate">Visit Date :</string>
    <string name="medDispense_clinic">Clinic :</string>
    <string name="medDispense_medicals">Medical(s)</string>
    <string name="dayDialog_title">Days</string>
    <string name="dayDialog_message">Enter Number of Days</string>
    <string name="dayDialog_button">Save</string>
    <string name="nav_clinic">Find Clinic</string>
    <string name="nav_add_favoiurite_clinic">Add Favourite Clinic</string>
    <string name="nav_create_new_account">Create New Account</string>
    <string name="nav_login">Login</string>
    <string name="nav_event">Event</string>
    <string name="nav_haze_info">Haze Info</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_bio_data">Bio Data</string>
    <string name="nav_vital_sign">Vital Sign</string>
    <string name="nav_lab_result">Lab Result</string>
    <string name="nav_queue">Queue</string>
    <string name="nav_appointment">Appointment</string>
    <string name="nav_edocument">eDocument</string>
    <string name="nav_clinic_message">Clinic Message</string>
    <string name="nav_logout">Logout</string>
</resources>