<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sg.com.ehealthassist.ehealthassist.Account.ActivitySetupPIN">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llBottom"
        android:layout_below="@+id/toolbar"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="@dimen/dimen_20dp">

        <TextView
            android:id="@+id/textNoteSetupPIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/msg_app_note"
            android:textColor="@color/colorblack"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewSetupPIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textNoteSetupPIN"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/pin_setup"
            android:textColor="@color/colorblack"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/editTextCreatePIN"
            style="@style/EditText"
            android:layout_below="@id/textViewSetupPIN"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:inputType="numberPassword"
            android:maxLength="@integer/max_length_pin" />

        <TextView
            android:id="@+id/textViewConfirmPIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextCreatePIN"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_setup"
            android:textColor="@color/colorblack"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/editTextConfirmCreatePIN"
            style="@style/EditText"
            android:layout_below="@id/textViewConfirmPIN"
            android:layout_centerHorizontal="true"
            android:cursorVisible="true"
            android:gravity="center_horizontal"
            android:inputType="numberPassword"
            android:maxLength="@integer/max_length_pin" />

        <TextView
            android:id="@+id/textViewSetupPinLockProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextConfirmCreatePIN"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/pin_lock_profile"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000"
            android:textSize="18dp"/>

        <Spinner
            android:id="@+id/spinnerSetupPinMinutes"
            style="@style/MaterialSpinnerStyle"
            android:layout_below="@+id/textViewSetupPinLockProfile"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonSetupConfirmPIN"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:text="@string/button_setup_confirm"
            android:textSize="16dp"/>
    </RelativeLayout>

</RelativeLayout>
